# LogReader

./: CMakeLists.txt  LICENSE  LogReader.pro  README.md  logentry.h  logviewer.cpp  logviewer.h  main.cpp  resources.qrc
.github/workflows/: main.yml
translations/: translation_en.ts
